--- a/frontend/src/css/Hnavbar.css
+++ b/frontend/src/css/Hnavbar.css
@@ -8,7 +8,7 @@
     border-radius: 1rem;
     position: fixed;
     background-color: white;
-    z-index: 45;
+    z-index: 99999999;
     top: 0;
     width: 100%;
 }
