--- a/frontend/src/css/PersonalChat.css
+++ b/frontend/src/css/PersonalChat.css
@@ -241,26 +241,90 @@ filter: invert(100%) sepia(100%) saturate(1%) hue-rotate(211deg) brightness(104%
     height: 3rem;
     border-radius: 1rem;
 }
+#sdbackpn{
+    display: none;
+}
 
 @media screen and (max-width: 1000px) {
     .chatcont{
-        background: rgb(252, 252, 252);
+        background: none;
         margin: auto;
-        width: 95vw;
-        margin-top: 2rem;
+        width: 98vw;
         display: block;
         height: max-content;
+        margin: auto;
+        margin-top: 2rem;
+        box-shadow: none;
+        border-radius: 1rem;
         
     }
     .chatcont .cinfo{
-        width: 100%;
-        background: #e9f6ff82;
+        width: 90vw;
+        background: #ffffff;
+        height: 45rem;
+        margin: auto;
+        margin-left: 5vw;
+        border-radius: 1rem;
+        
     }
-    .chatcont .selchat{
-        min-height: 40rem;
+    .chatcont .selchat.active{
+        min-height: 45rem;
         height: max-content;
         background:rgb(247, 250, 255); ;
-        width: 100%; 
-        position: relative;
+        width: 91vw; 
+        position: absolute;
+        border-radius: 1rem;
+        margin-top: -45rem;
+        margin-left: 4vw;
+    }
+    .chatcont .seluser {
+        height: 4rem;
+        width: 100%;
+        background: rgb(168, 205, 237);
+        border-top-right-radius: 0.9rem;
+        border-top-left-radius: 0.9rem;
+    }
+    .chatcont .selchat.false{
+        display: none;
+    }
+    #sdbackpn{
+        display: block;
+        height: 2.5rem;
+        margin-left: 1rem;
+        margin-top: 0.6rem;
+        margin-right: 1rem;
+       
+    }
+    .userssasd{
+        display: flex;
+    }
+    .chatcont .myinfo {
+        height: 4rem;
+        background: rgb(168, 205, 237);
+        padding: 0.1px;
+        display: flex;
+        border-top-left-radius: 0.9rem;
+        border-top-right-radius: 0.9rem;
+    }
+    .chatcont .cinfo .userss {
+        text-align: left;
+        overflow: scroll;
+        overflow-x: hidden;
+        min-height: 40rem;
+    }
+    .selchat .messages {
+        height: 38rem;
+        overflow: scroll;
+        overflow-x: hidden;
+    }
+    #midhr{
+        display: none;
+    }
+    .chatcont .seluser p {
+        margin: 0;
+        padding-top: 1rem;
+        text-align: left;
+        padding-left: 1rem;
+        font-size: 1.5rem;
     }
 }
