--- a/frontend/src/css/Dis.css
+++ b/frontend/src/css/Dis.css
@@ -146,9 +146,35 @@
 }
 
 @media screen and (max-width: 1000px) {
+  .dispredd .chatfunc {
+    width: 95vw;
+    margin-right: 0vw;
+    margin-left: auto;
+    margin: auto;
+    height: max-content;
+    margin-top: 2rem;
+}
+.dispredd .chatfunc img{
+  height: 30vw;
+}
+.dispredd .chatfunc p{
+  width: 90%;
+}
+.dis {
+  width: 95vw;
+  margin-right: 0vw;
+  margin-left: auto;
+  margin: auto;
+  height: max-content;
+  border-radius: 1rem;
+  background: rgb(237, 249, 255);
+  margin-top: 2rem;
+  padding: 0.1px;
+  padding-bottom: 2rem;
+}
   .dispredd{
     position: relative;
-    z-index: -6;
+  
   }
   .dise {
     display: block;
@@ -157,6 +183,19 @@
 
   
   }
+  .diseaa {
+    width: 80%;
+    background: #ffffff;
+    box-shadow: 2px 2px 8px rgb(236, 236, 236);
+    margin-top: 2rem;
+    height: max-content;
+    min-height: 18rem;
+    padding-bottom: 2rem;
+    border-radius: 0.9rem;
+    margin: auto;
+    margin-bottom: 2rem;
+    padding-top: 2rem;
+}
   .dise img{
     width: 10rem;
   }
